# OpenManus

docs/: README.md  getting-started.md
docs/architecture/: README.md
docs/components/: rag-and-search.md
docs/guides/: educational-rag.md  implementation-steps.md
sentris_rag/: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
sentris_rag/config/: config.example.toml
sentris_rag/docs/: EDUCATIONAL_COMPONENTS.md  OPENMANUS_OVERVIEW.md
sentris_rag/examples/: basic_usage.py
sentris_rag/src/rag/: knowledge_base.py  processor.py
sentris_rag/src/sentris_rag/: __init__.py
sentris_rag/src/sentris_rag/educational/: learning_path.py  quality.py  quiz.py
sentris_rag/src/sentris_rag/llm/: provider.py
sentris_rag/src/sentris_rag/rag/: knowledge_base.py  processor.py
sentris_rag/src/sentris_rag/web/: search.py
sentris_rag/src/web/: search.py
